--- a/style.css
+++ b/style.css
@@ -8,13 +8,16 @@
     /* Francois One */
     /* PT Sans */
     /* Farro */
-    --max-width: 1440px;
+    --max-width: 1200px;
+    --padding: 15px;
+    --header-height: 55px;
 }
 
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    outline: 1px solid red;
 }
 
 body{
@@ -23,28 +26,41 @@ body{
 }
 header{
     width : inherit;
+    height: var(--header-height) ;
     position: fixed;
     top:0;
     left:0;
     right:0;
     max-width : var(--max-width);
     margin: auto;
+    padding: var(--padding);
+    background: var(--background-color);
     
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background: green;
+    z-index: 200;
 }
 
 main{
+    position: relative;
+    max-width : var(--max-width);
+    padding: var(--header-height) var(--padding);
+    margin: auto;
+    z-index: 100;
+    background: var(--background-color);
+    background-image: url('assets/bg.svg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: top var(--header-height) left 200px;
+    background-size: 100% 100%;
+    height: 200vh; /* Example height, adjust as needed */
 
-    height: 200vh;
-    background: red;;
-    section{
-
-    }
-    aside{
-
-    }
+    
+    /* aside{
+        position: sticky;
+        top: 0;
+        left: 0;
+    } */
 
 }
