--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-:root{
-    --background-color: rgba(255,255,255,1);
-    --text-color:rgba(218, 218, 218, 1);
+:root {
+    --background-color: rgba(255, 255, 255, 1);
+    --text-color: rgba(218, 218, 218, 1);
     --text-size: 28px;
     --title-size: 36px;
     /* Staatliches */
@@ -13,39 +13,41 @@
     --header-height: 55px;
 }
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     outline: 1px solid red;
 }
 
-body{
+body {
     width: 100%;
-    height: auto; 
+    height: auto;
 }
-header{
-    width : inherit;
-    height: var(--header-height) ;
+
+header {
+    width: inherit;
+    height: var(--header-height);
     position: fixed;
-    top:0;
-    left:0;
-    right:0;
-    max-width : var(--max-width);
+    top: 0;
+    left: 0;
+    right: 0;
+    max-width: var(--max-width);
     margin: auto;
     padding: var(--padding);
-    background: var(--background-color);
-    
+    background: rgba(255, 255, 255, 0.5);
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     z-index: 200;
 }
 
-main{
+main {
     position: relative;
-    max-width : var(--max-width);
-    padding: var(--header-height) var(--padding);
+    max-width: var(--max-width);
+    padding-top: var(--header-height);
+    margin-top: var(--header-height);
     margin: auto;
     z-index: 100;
     background: var(--background-color);
@@ -54,13 +56,23 @@ main{
     background-attachment: fixed;
     background-position: top var(--header-height) left 200px;
     background-size: 100% 100%;
-    height: 200vh; /* Example height, adjust as needed */
+    height: 200vh;
+    /* Example height, adjust as needed */
+    display: flex;
+    flex-direction: row;
+    justify-content: stretch;
+    align-items: self-start;
 
-    
-    /* aside{
+    aside {
+        padding-top: var(--header-height);
         position: sticky;
         top: 0;
         left: 0;
-    } */
+        flex: 2;
+    }
+    section{
+        flex: 5;
+    }
+
 
 }
