--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 :root {
     --background-color: rgba(255, 255, 255, 1);
-    --text-color: rgba(218, 218, 218, 1);
+    --text-color: rgba(0, 0, 0, 1);
     --text-size: 28px;
     --title-size: 36px;
+    --transition: all .5s ease-out;
     /* Staatliches */
     /* Tourney */
     /* Francois One */
@@ -17,7 +18,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
+}
+
+ul {
+    list-style: none;
 }
 
 body {
@@ -39,7 +44,48 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 50px;
     z-index: 200;
+
+    button {
+        text-transform: uppercase;
+        font-family: Tourney;
+        font-size: 22px;
+        font-weight: 600;
+        line-height: 18px;
+        letter-spacing: 0.04em;
+        text-align: center;
+        border: none;
+        outline: none;
+        background: inherit;
+        cursor: pointer;
+        user-select: none;
+    }
+
+    ul {
+        margin-right: auto;
+        ;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    li {
+        color: i var(--text-color);
+        font-family: Staatliches;
+        font-size: 22px;
+    }
+
+    a {
+        color: inherit;
+        font-size: 22px;
+        font-weight: 400;
+        line-height: 27.5px;
+        letter-spacing: 0.03em;
+        text-decoration: none;
+        user-select: none;
+    }
+
 }
 
 main {
@@ -54,7 +100,7 @@ main {
     background-attachment: fixed;
     background-position: top var(--header-height) left 200px;
     background-size: 100% 100%;
-    height: 200vh;
+    height: auto;
     /* Example height, adjust as needed */
     display: flex;
     flex-direction: row;
@@ -62,15 +108,81 @@ main {
     align-items: self-start;
 
     aside {
-        padding-top:  var(--header-height);
+        padding: var(--header-height) var(--padding);
         position: sticky;
         top: 0;
         left: 0;
         flex: 2;
+
+        li {
+            color: var(--text-color);
+            margin-bottom: 80px;
+            border-bottom: 1px solid rgba(189, 189, 189, 1);
+            transition: var(--transition);
+
+            &:hover {
+                transition: var(--transition);
+                border-bottom: 1px solid var(--text-color);
+            }
+        }
+
+        a {
+            color: inherit;
+            text-transform: uppercase;
+            font-family: Francois One;
+            font-size: var(--title-size);
+            font-weight: 400;
+            line-height: 48px;
+            letter-spacing: 0.04em;
+            text-decoration: none;
+            overflow: hidden;
+            white-space: nowrap;
+        }
     }
-    section{
+
+    section {
         flex: 5;
-        padding-top:   var(--header-height);
+        padding: var(--header-height) var(--padding);
+        color: var(--text-color);
+
+        ul {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: start;
+        }
+
+        h2 {
+            font-family: Francois One;
+            font-size: var(--title-size);
+            font-weight: 400;
+            line-height: 48px;
+            letter-spacing: 0.04em;
+            text-transform: uppercase;
+            text-wrap: nowrap;
+            margin-bottom: 40px;;
+        }
+
+        sup {
+            font-family: Farro;
+            font-size: 28px;
+            font-weight: 300;
+            line-height: 30px;
+            letter-spacing: 0.04em;
+            text-wrap: nowrap;
+            text-transform: capitalize;
+            margin: 10px;
+        }
+        p{
+            font-family: PT Sans;
+            font-size: var(--text-size);
+            font-weight: 400;
+            line-height: 48px;
+            margin-bottom: 40px;    
+            width: 100%;   
+        }
+        article{
+        }
 
     }
 
